--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^9.5.0",
+    "humanize-duration": "^3.27.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-icons": "^4.3.1",
@@ -17,6 +20,7 @@
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "simplify-number": "^1.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
