--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-social-login-buttons": "^3.6.0",
     "simplify-number": "^1.0.0",
     "web-vitals": "^1.1.2"
   },
