--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-social-login-buttons": "^3.6.0",
+    "react-toastify": "^8.1.0",
     "simplify-number": "^1.0.0",
     "web-vitals": "^1.1.2"
   },
