--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
